--- a/index.html
+++ b/index.html
@@ -1,92 +1,38 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Discover how Systeme.io can help you build, automate, and scale your online business all in one place. Try it free today!">
-  <meta property="og:title" content="Systeme.io - Launch & Grow Your Online Business" />
-  <meta property="og:description" content="All-in-one platform for entrepreneurs and marketers. Build funnels, email campaigns, courses, and more. No coding needed." />
-  <meta property="og:url" content="https://tamato-affiliate.github.io/systemeio-landing/" />
-  <meta property="og:image" content="https://tamato-affiliate.github.io/systemeio-landing/assets/systeme-cover.png" />
-  <title>Systeme.io - Launch & Grow Your Online Business</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <title>Systeme.io - Your All-in-One Business Platform</title>
   <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f9fbfd;
-      color: #333;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f5f7fa; color: #333; }
     header {
       background: linear-gradient(to right, #2c3e50, #4ca1af);
-      color: white;
-      text-align: center;
-      padding: 60px 20px;
+      color: white; text-align: center; padding: 60px 20px;
     }
-    header h1 {
-      margin-bottom: 10px;
-      font-size: 2.5em;
-    }
-    header p {
-      font-size: 18px;
-    }
-    .container {
-      max-width: 960px;
-      margin: auto;
-      padding: 40px 20px;
-    }
-    h2 {
-      color: #2c3e50;
-      margin-top: 40px;
-      font-size: 1.8em;
-    }
-    ul {
-      padding-left: 20px;
-      line-height: 1.6;
-    }
+    header h1 { margin-bottom: 10px; font-size: 32px; }
+    header p { font-size: 18px; }
     .cta {
-      display: inline-block;
-      margin: 30px 0 10px;
-      background: #28a745;
-      color: white;
-      padding: 14px 28px;
-      font-size: 18px;
-      border-radius: 6px;
-      text-decoration: none;
-      transition: background 0.3s ease;
-    }
-    .cta:hover {
-      background: #218838;
+      display: inline-block; margin: 30px 0 10px;
+      background: #28a745; color: white;
+      padding: 14px 28px; font-size: 18px;
+      border-radius: 6px; text-decoration: none;
     }
     .cta-note {
-      font-size: 14px;
-      font-style: italic;
-      color: #eee;
-      max-width: 600px;
+      font-size: 14px; font-style: italic;
+      color: #eee; max-width: 600px;
       margin: 10px auto 0;
     }
+    .container { max-width: 960px; margin: auto; padding: 40px 20px; }
+    h2 { color: #2c3e50; margin-top: 40px; }
+    ul { padding-left: 20px; line-height: 1.6; }
+    img.screenshot {
+      display: block; margin: 40px auto; max-width: 100%; border-radius: 8px; box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+    .note { font-style: italic; font-size: 14px; color: #555; margin-top: 25px; }
     footer {
-      text-align: center;
-      background: #2c3e50;
-      color: white;
-      padding: 20px;
-    }
-    .note {
-      font-style: italic;
-      font-size: 14px;
-      color: #555;
-      margin-top: 25px;
-    }
-    .illustration {
-      text-align: center;
-      margin: 40px 0;
-    }
-    .illustration img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      text-align: center; background: #2c3e50; color: white; padding: 20px;
     }
   </style>
 </head>
@@ -98,11 +44,9 @@
     <p class="cta-note">Your sign-up brings real support to my small family. I sincerely thank you!</p>
   </header>
 
-  <div class="container">
-    <div class="illustration">
-      <img src="https://tamato-affiliate.github.io/systemeio-landing/assets/systeme-cover.png" alt="Systeme.io platform preview">
-    </div>
+  <img src="systeme-dashboard.png" alt="Systeme.io platform preview" class="screenshot" />
 
+  <div class="container">
     <h2>Feeling Overwhelmed?</h2>
     <p>Are you tired of juggling different tools to manage your online business? Building websites, writing emails, setting up payments, launching courses – it's exhausting and expensive!</p>
 
