--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p class="cta-note">Your sign-up brings real support to my small family. I sincerely thank you!</p>
   </header>
 
-  <img src="systeme-dashboard.png" alt="Systeme.io platform preview" class="screenshot" />
+ <img src="systeme-dashboard.png" alt="Systeme.io preview" />
 
   <div class="container">
     <h2>Feeling Overwhelmed?</h2>
