--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Systeme.io - Your All-in-One Business Platform</title>
   <style>
+    .screenshot {
+  display: block;
+  margin: 40px auto;
+  max-width: 100%;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+}
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f5f7fa; color: #333; }
     header {
       background: linear-gradient(to right, #2c3e50, #4ca1af);
@@ -35,6 +42,13 @@
       text-align: center; background: #2c3e50; color: white; padding: 20px;
     }
   </style>
+  .screenshot {
+  display: block;
+  margin: 40px auto;
+  max-width: 100%;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+}
 </head>
 <body>
   <header>
@@ -44,7 +58,7 @@
     <p class="cta-note">Your sign-up brings real support to my small family. I sincerely thank you!</p>
   </header>
 
- <img src="systeme-dashboard.png" alt="Systeme.io preview" />
+<img class="screenshot" src="systeme-dashboard.png" alt="Systeme.io preview" />
 
   <div class="container">
     <h2>Feeling Overwhelmed?</h2>
