--- a/index.html
+++ b/index.html
@@ -85,7 +85,14 @@
     <p class="cta-note">Your sign-up brings real support to my small family. I sincerely thank you!</p>
   </header>
 
-  <img class="screenshot" src="systeme-dashboard.png" alt="Systeme.io platform preview" />
+<div class="screenshots">
+  <img src="systemeio_images_v2/systeme-banner.jpg" alt="Systeme.io banner" />
+  <img src="systemeio_images_v2/systeme-tech.jpg" alt="Systeme.io technical overview" />
+  <img src="systemeio_images_v2/systeme-review.jpg" alt="Systeme.io reviews" />
+  <img src="systemeio_images_v2/systeme-marketing.jpg" alt="Marketing dashboard" />
+  <img src="systemeio_images_v2/systeme-ai.jpg" alt="AI automation system" />
+</div>
+
 
   <div class="container">
     <h2>Feeling Overwhelmed?</h2>
