--- a/index.html
+++ b/index.html
@@ -1,79 +1,45 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Systeme.io - Your All-in-One Business Platform</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f5f7fa;
-      color: #333;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f5f7fa; color: #333; }
     header {
       background: linear-gradient(to right, #2c3e50, #4ca1af);
-      color: white;
-      text-align: center;
-      padding: 60px 20px;
+      color: white; text-align: center; padding: 60px 20px;
     }
-    header h1 {
-      margin-bottom: 10px;
-      font-size: 32px;
-    }
-    header p {
-      font-size: 18px;
-    }
+    header h1 { margin-bottom: 10px; }
+    header p { font-size: 18px; }
+    .container { max-width: 960px; margin: auto; padding: 40px 20px; }
+    h2 { color: #2c3e50; margin-top: 40px; }
+    ul { padding-left: 20px; line-height: 1.6; }
     .cta {
-      display: inline-block;
-      margin: 30px 0 10px;
-      background: #28a745;
-      color: white;
-      padding: 14px 28px;
-      font-size: 18px;
-      border-radius: 6px;
-      text-decoration: none;
+      display: inline-block; margin: 30px 0 10px;
+      background: #28a745; color: white;
+      padding: 14px 28px; font-size: 18px;
+      border-radius: 6px; text-decoration: none;
     }
     .cta-note {
-      font-size: 14px;
-      font-style: italic;
-      color: #eee;
-      max-width: 600px;
+      font-size: 14px; font-style: italic;
+      color: #eee; max-width: 600px;
       margin: 10px auto 0;
     }
-    .screenshot {
-      display: block;
-      margin: 40px auto;
-      max-width: 100%;
+    footer {
+      text-align: center; background: #2c3e50; color: white; padding: 20px;
+    }
+    .note { font-style: italic; font-size: 14px; color: #555; margin-top: 25px; }
+    .screenshots {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 20px;
+      margin: 40px 0;
+    }
+    .screenshots img {
+      width: 100%;
       border-radius: 8px;
       box-shadow: 0 0 15px rgba(0,0,0,0.1);
-    }
-    .container {
-      max-width: 960px;
-      margin: auto;
-      padding: 40px 20px;
-    }
-    h2 {
-      color: #2c3e50;
-      margin-top: 40px;
-    }
-    ul {
-      padding-left: 20px;
-      line-height: 1.6;
-    }
-    footer {
-      text-align: center;
-      background: #2c3e50;
-      color: white;
-      padding: 20px;
-    }
-    .note {
-      font-style: italic;
-      font-size: 14px;
-      color: #555;
-      margin-top: 25px;
     }
   </style>
 </head>
@@ -81,20 +47,19 @@
   <header>
     <h1>Systeme.io - Your All-in-One Business Platform</h1>
     <p>Build, automate, and grow your online business effortlessly.</p>
-    <a class="cta" href="https://systeme.io/?sa=sa023645249894f570af853c4adceaa54dbbed069f">Start for Free</a>
+    <a class="cta" href="https://systeme.io/?sa=sa0236452498945f70af853c4adceaa54dbbed069f">Start for Free</a>
     <p class="cta-note">Your sign-up brings real support to my small family. I sincerely thank you!</p>
   </header>
 
-<div class="screenshots">
-  <img src="systemeio_images_v2/systeme-banner.jpg" alt="Systeme.io banner" />
-  <img src="systemeio_images_v2/systeme-tech.jpg" alt="Systeme.io technical overview" />
-  <img src="systemeio_images_v2/systeme-review.jpg" alt="Systeme.io reviews" />
-  <img src="systemeio_images_v2/systeme-marketing.jpg" alt="Marketing dashboard" />
-  <img src="systemeio_images_v2/systeme-ai.jpg" alt="AI automation system" />
-</div>
-
-
   <div class="container">
+    <div class="screenshots">
+      <img src="systemeio_images_v2/systeme-banner.jpg" alt="Systeme.io banner" />
+      <img src="systemeio_images_v2/systeme-tech.jpg" alt="Systeme.io technical overview" />
+      <img src="systemeio_images_v2/systeme-review.jpg" alt="Systeme.io reviews" />
+      <img src="systemeio_images_v2/systeme-marketing.jpg" alt="Marketing dashboard" />
+      <img src="systemeio_images_v2/systeme-ai.jpg" alt="AI automation system" />
+    </div>
+
     <h2>Feeling Overwhelmed?</h2>
     <p>Are you tired of juggling different tools to manage your online business? Building websites, writing emails, setting up payments, launching courses – it's exhausting and expensive!</p>
 
@@ -127,12 +92,12 @@
       <li>Small business owners digitizing their sales</li>
     </ul>
 
-    <a class="cta" href="https://systeme.io/?sa=sa023645249894f570af853c4adceaa54dbbed069f">Create Your Free Account</a>
+    <a class="cta" href="https://systeme.io/?sa=sa0236452498945f70af853c4adceaa54dbbed069f">Create Your Free Account</a>
 
     <p class="note">
-      I'm currently going through financial hardship and carrying the full responsibility of supporting my small family.
-      Signing up through my affiliate link is completely free for you, but would mean a great deal for us.
-      This is a safe, legal link — not a scam — and your support truly matters.
+      I'm currently going through financial hardship and carrying the full responsibility of supporting my small family.  
+      Signing up through my affiliate link is completely free for you, but would mean a great deal for us.  
+      This is a safe, legal link — not a scam — and your support truly matters.  
       From the bottom of my heart, thank you. I wish you and your loved ones happiness, prosperity, and all the best.
     </p>
   </div>
