--- a/bokemhub_landing_page/index.html
+++ b/bokemhub_landing_page/index.html
@@ -47,7 +47,7 @@
   <header>
     <h1>Systeme.io - Your All-in-One Business Platform</h1>
     <p>Build, automate, and grow your online business effortlessly.</p>
-    <a class="cta" href="https://systeme.io/?sa=sa0236452498945f70af853c4adceaa54dbbed069f">Start for Free</a>
+    <a class="cta" href="https://systeme.io/home?sa=sa023645249894f570af853c4adceaa54dbbed069f">Start for Free</a>
     <p class="cta-note">Your sign-up brings real support to my small family. I sincerely thank you!</p>
   </header>
 
@@ -91,7 +91,7 @@
       <li>Small business owners digitizing their sales</li>
     </ul>
 
-    <a class="cta" href="https://systeme.io/?sa=sa0236452498945f70af853c4adceaa54dbbed069f">Create Your Free Account</a>
+    <a class="cta" href="https://systeme.io/home?sa=sa023645249894f570af853c4adceaa54dbbed069f">Create Your Free Account</a>
 
     <p class="note">
       I'm currently going through financial hardship and carrying the full responsibility of supporting my small family.  
