--- a/marketing_tool/index_with_5_images.html
+++ b/marketing_tool/index_with_5_images.html
@@ -31,6 +31,11 @@
 </div>
 
     <header>
+    <div style="position:relative;background:#fff4c2; padding:12px 20px; border-bottom:1px solid #f0c36d;
+              text-align:center;font-size:15px;color:#333;">
+    🛈 This page contains affiliate links. I may earn a commission if you sign up through these links —
+    <strong>at no additional cost to you</strong>. Thank you for your support!
+  </div>
         <h1>🧠 All-in-One AI Marketing Solutions for 2025</h1>
         <p>🔥 Discover the Best 4 Platforms for Business Owners, Freelancers & Online Entrepreneurs!</p>
         <p>👉 Optimize your email marketing, build landing pages, manage customers & automate sales — no coding needed!</p>
